# RemoteGazeUX

./: README.md  environment.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: python-app.yml
scripts/: update_pyproject_metadata.py
src/: app.py  config.py  task_editor.py
src/api/: routes.py  services.py
src/app/static/: gazeTracking.js  main.js
src/app/static/js/: sujetos.js
src/app/templates/: estudios.html  login.html  navbar.html  resultados.html  sujetos.html  visualizacion.html
src/db/: __init__.py  db_config.py  db_manager.py  models.py
src/repositories/: __init__.py  base_repository.py  measurement_repository.py  point_repository.py  study_repository.py  subject_repository.py  tasklog_repository.py  user_repository.py
src/state/: __init__.py  config_manager.py
tests/: conftest.py  test_api.py  test_authentication.py  test_config.py  test_database.py  test_login_routes.py  test_models.py  test_repositories.py  test_routes.py  test_services.py
